err/errbot-rethinkdb-storage.err
Listing '.'...
Listing './EGG-INFO'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/WebTest-2.0.29.dist-info'...
Listing './lib/python3.5/site-packages/Yapsy-1.11.223.egg-info'...
Listing './lib/python3.5/site-packages/ansi'...
Listing './lib/python3.5/site-packages/ansi/colour'...
Listing './lib/python3.5/site-packages/ansi-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/colorlog'...
Listing './lib/python3.5/site-packages/colorlog/tests'...
Listing './lib/python3.5/site-packages/colorlog-3.1.0.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/daemonize-2.4.7.dist-info'...
Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/dnspython3-1.15.0.egg-info'...
Listing './lib/python3.5/site-packages/errbot'...
Listing './lib/python3.5/site-packages/errbot/backends'...
Listing './lib/python3.5/site-packages/errbot/backends/images'...
Listing './lib/python3.5/site-packages/errbot/backends/styles'...
Listing './lib/python3.5/site-packages/errbot/core_plugins'...
Listing './lib/python3.5/site-packages/errbot/core_plugins/templates'...
Listing './lib/python3.5/site-packages/errbot/rendering'...
Listing './lib/python3.5/site-packages/errbot/storage'...
Listing './lib/python3.5/site-packages/errbot/templates'...
Listing './lib/python3.5/site-packages/errbot/templates/initdir'...
Listing './lib/python3.5/site-packages/errbot-5.1.3.egg-info'...
Listing './lib/python3.5/site-packages/errbot_rethinkdb_storage'...
Listing './lib/python3.5/site-packages/errbot_rethinkdb_storage-1.1.2.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/pygments_markdown_lexer'...
Listing './lib/python3.5/site-packages/pygments_markdown_lexer-0.1.0.dev39.egg-info'...
Listing './lib/python3.5/site-packages/repool_forked'...
Listing './lib/python3.5/site-packages/repool_forked-0.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/rethinkdb'...
Listing './lib/python3.5/site-packages/rethinkdb/asyncio_net'...
Listing './lib/python3.5/site-packages/rethinkdb/backports'...
Listing './lib/python3.5/site-packages/rethinkdb/backports/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/rethinkdb/gevent_net'...
Listing './lib/python3.5/site-packages/rethinkdb/tornado_net'...
Listing './lib/python3.5/site-packages/rethinkdb/twisted_net'...
Listing './lib/python3.5/site-packages/rethinkdb-2.3.0.post6.egg-info'...
Listing './lib/python3.5/site-packages/rocket'...
Listing './lib/python3.5/site-packages/rocket/methods'...
Listing './lib/python3.5/site-packages/rocket_errbot-1.2.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/waitress'...
Listing './lib/python3.5/site-packages/waitress/tests'...
Listing './lib/python3.5/site-packages/waitress/tests/fixtureapps'...
Listing './lib/python3.5/site-packages/waitress-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/webtest'...
Listing './lib/python3.5/site-packages/yapsy'...
Listing './share'...
Listing './share/python-wheels'...
